[gd_scene load_steps=11 format=3 uid="uid://cloyj3x77kooe"]

[ext_resource type="Script" uid="uid://c4jksf8fjorbq" path="res://gui/card_ui/card_ui.gd" id="1_yoh4j"]
[ext_resource type="Resource" uid="uid://3d6wf6kv6mlx" path="res://content/card/slash/slash.tres" id="2_yoh4j"]
[ext_resource type="Texture2D" uid="uid://chru8i750snui" path="res://content/card/slash/tile375.png" id="3_4lh35"]
[ext_resource type="Script" uid="uid://c8tuo6v3dofdb" path="res://gui/card_ui/card_state_machine.gd" id="4_rruta"]
[ext_resource type="Script" uid="uid://cs3222wvknp6v" path="res://gui/card_ui/card_states/card_base_state.gd" id="5_a6pyw"]
[ext_resource type="Script" uid="uid://dxg70d6aei8ow" path="res://gui/card_ui/card_states/card_dragging_state.gd" id="6_asosk"]
[ext_resource type="Script" uid="uid://cvhaxn7t18o68" path="res://gui/card_ui/card_states/card_released_state.gd" id="7_lu4o5"]
[ext_resource type="Script" uid="uid://buqdq5plbq0nl" path="res://gui/card_ui/card_states/card_aiming_state.gd" id="8_xulxq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yoh4j"]
bg_color = Color(1, 0.6, 0.6, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lh35"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yoh4j")
card = ExtResource("2_yoh4j")

[node name="CardVisual" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="Panel" parent="CardVisual"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yoh4j")

[node name="Icon" type="TextureRect" parent="CardVisual"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_4lh35")
expand_mode = 1
stretch_mode = 3

[node name="CardDropAreaDetector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropAreaDetector"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_4lh35")
debug_color = Color(0, 0.592157, 0.737255, 0)

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("4_rruta")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_a6pyw")

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_asosk")

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_lu4o5")

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_xulxq")
